add archival tool

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,12 @@
 version: "3.7"
 
 services:
+  redis:
+    image: redis:7.2
+    volumes:
+      - rdata:/data
+    ports:
+      - "6379:6379"
   database:
     image: postgres:15
     volumes:
@@ -33,4 +39,4 @@ services:
   #
 volumes:
   pgdata:
-  # mdata:
+  rdata:
