--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - rdata:/data
     ports:
       - "6379:6379"
+    command: redis-server --save 20 a --loglevel warning --requirepass redis123
   postgres:
     image: postgres:15
     volumes:
