--- a/fly.toml
+++ b/fly.toml
@@ -11,6 +11,7 @@ kill_signal = 'SIGTERM'
 
 [deploy]
   release_command = '/app/bin/migrate'
+  strategy = "bluegreen"
 
 [env]
   PORT = '8080'
@@ -28,6 +29,25 @@ kill_signal = 'SIGTERM'
     type = 'connections'
     hard_limit = 1000
     soft_limit = 1000
+
+[checks]
+  [checks.gits_http_check]
+    grace_period = "30s"
+    interval = "30s"
+    method = "get"
+    path = "/healthz"
+    port = 8080
+    timeout = "10s"
+    type = "http"
+    [checks.gits_http_check.headers]
+      Content-Type = "application/json"
+
+  [checks.gits_tcp_check]
+    grace_period = "30s"
+    interval = "15s"
+    port = 8080
+    timeout = "10s"
+    type = "tcp"
 
 [[vm]]
   memory = '512mb'
