--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -62,20 +62,20 @@ jobs:
       - name: Install dependencies
         run: mix deps.get
 
-      - name: Compiles
-        run: mix compile
+      # - name: Compiles
+      # run: mix compile
 
       # - name: Compiles without warnings
       # run: mix compile --warnings-as-errors
 
-      - name: Setup database
+      - name: Prepare database
         run: mix ash.setup
 
       - name: Run migrations
         run: mix ash.migrate
 
-      - name: Check Formatting
-        run: mix format --check-formatted
+      # - name: Check Formatting
+      #   run: mix format --check-formatted
 
       - name: Run tests
         run: mix test
