--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -69,10 +69,10 @@ jobs:
       # run: mix compile --warnings-as-errors
 
       - name: Prepare database
-        run: mix ash.setup
+        run: MIX_ENV=test mix ash.setup
 
       - name: Run migrations
-        run: mix ash.migrate
+        run: MIX_ENV=test mix ash.migrate
 
       # - name: Check Formatting
       #   run: mix format --check-formatted
