--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -83,7 +83,7 @@ jobs:
       - name: Run tests
         run: mix test
   deploy:
-    # needs: [test]
+    needs: [test]
     name: Deploy app
     runs-on: ubuntu-latest
     concurrency: deploy-group
