--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ AWS_S3_SCHEME=http://
 AWS_S3_HOST=localhost
 AWS_S3_PORT=9000
 BUCKET_NAME= # go to minio dashboard and create this bucket, http://localhost:9090/buckets/add-bucket
+MAILGUN_DOMAIN="localhost"
+
+PAYSTACK_SECRET_KEY=""
