--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,4 @@ AWS_S3_PORT=9000
 BUCKET_NAME= # go to minio dashboard and create this bucket, http://localhost:9090/buckets/add-bucket
 MAILGUN_DOMAIN="localhost"
 
-PAYSTACK_SECRET_KEY=""
+PAYSTACK_SECRET_KEY="key"
