--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -20,6 +20,9 @@ jobs:
           --health-timeout 5s
           --health-retries 5
     steps:
+      - name: Set up environment
+        run: sudo apt install -y libsodium-dev
+
       - name: Set up Elixir
         uses: erlef/setup-beam@v1
         with:
