--- a/fly.toml
+++ b/fly.toml
@@ -30,6 +30,12 @@ kill_signal = 'SIGTERM'
     hard_limit = 1000
     soft_limit = 1000
 
+[[http_service.checks]]
+  grace_period = "10s"
+  interval = "90s"
+  method = "GET"
+  timeout = "5s"
+  path = "/healthz"
 
 [[vm]]
   memory = '512mb'
