--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for gits on 2024-04-20T11:14:37+02:00
+# fly.toml app configuration file generated for gits-staging on 2024-09-16T11:23:15+02:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'gits'
+app = 'gits-staging'
 primary_region = 'jnb'
 kill_signal = 'SIGTERM'
 
@@ -11,16 +11,12 @@ kill_signal = 'SIGTERM'
 
 [deploy]
   release_command = '/app/bin/migrate'
-  strategy = "bluegreen"
-
-[env]
-  PORT = '8080'
-  TZ = 'Africa/Johannesburg'
+  strategy = 'bluegreen'
 
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
   processes = ['app']
@@ -30,14 +26,12 @@ kill_signal = 'SIGTERM'
     hard_limit = 1000
     soft_limit = 1000
 
-[[http_service.checks]]
-  grace_period = "10s"
-  interval = "90s"
-  method = "GET"
-  timeout = "5s"
-  path = "/healthz"
+  [[http_service.checks]]
+    interval = '1m30s'
+    timeout = '5s'
+    grace_period = '10s'
+    method = 'GET'
+    path = '/healthz'
 
 [[vm]]
-  memory = '512mb'
-  cpu_kind = 'shared'
-  cpus = 2
+  size = 'shared-cpu-2x'
