--- a/assets/package.json
+++ b/assets/package.json
@@ -4,7 +4,9 @@
     "html5-qrcode": "^2.3.8"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.9",
     "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5.5.4"
   }
 }
