--- a/assets/package.json
+++ b/assets/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "@floating-ui/dom": "^1.6.7",
-    "html5-qrcode": "^2.3.8"
+    "html5-qrcode": "^2.3.8",
+    "quill": "^2.0.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
