--- a/assets/package.json
+++ b/assets/package.json
@@ -5,6 +5,8 @@
     "quill": "^2.0.2"
   },
   "devDependencies": {
+    "@egoist/tailwindcss-icons": "^1.8.1",
+    "@iconify/json": "^2.2.263",
     "@tailwindcss/forms": "^0.5.9",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.13",
