feat: add github actions workflow for staging deployment
- create new workflow file `.github/workflows/fly-stg.yml`
  to automate staging deployments.
- update `fly.toml` to adjust health check interval
  and vm resource settings for better performance.
- ensure `fly_api_token` is securely used in the deployment
  process to enhance security.

--- a/fly.toml
+++ b/fly.toml
@@ -1,17 +1,12 @@
-# fly.toml app configuration file generated for gits-staging on 2024-09-16T11:23:15+02:00
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
-
-app = 'gits-staging'
 primary_region = 'jnb'
 kill_signal = 'SIGTERM'
 
 [build]
 
 [deploy]
-  release_command = '/app/bin/migrate'
   strategy = 'bluegreen'
+  release_command = '/app/bin/migrate'
+
 
 [http_service]
   internal_port = 8080
@@ -27,12 +22,13 @@ kill_signal = 'SIGTERM'
     soft_limit = 1000
 
   [[http_service.checks]]
-    interval = '1m30s'
+    interval = '1m0s'
     timeout = '5s'
     grace_period = '10s'
     method = 'GET'
     path = '/healthz'
 
 [[vm]]
-  size = 'shared-cpu-1x'
-  memory = '512'
+  memory = '512mb'
+  cpu_kind = 'shared'
+  cpus = 1
