--- a/.github/workflows/fly-prd.yml
+++ b/.github/workflows/fly-prd.yml
@@ -1,7 +1,7 @@
 on:
   push:
     branches:
-      - 'main'
+      - main
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -10,6 +10,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy --remote-only --app gits-stg
+      - run: flyctl deploy --remote-only --app gits-prd
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
