--- a/fly.toml
+++ b/fly.toml
@@ -1,3 +1,9 @@
+# fly.toml app configuration file generated for gits-prd on 2025-01-09T13:40:25+02:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'gits-prd'
 primary_region = 'jnb'
 kill_signal = 'SIGTERM'
 
@@ -7,6 +13,9 @@ kill_signal = 'SIGTERM'
   strategy = 'bluegreen'
   release_command = '/app/bin/migrate'
 
+[env]
+  PHX_HOST = 'gits-prd.fly.dev'
+  PORT = '8080'
 
 [http_service]
   internal_port = 8080
