--- a/.github/workflows/fly-prd.yml
+++ b/.github/workflows/fly-prd.yml
@@ -6,7 +6,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     concurrency:
-      group: gits-stg
+      group: gits-prd
     steps:
       - uses: actions/checkout@v4
       - uses: superfly/flyctl-actions/setup-flyctl@master
