--- a/assets/package.json
+++ b/assets/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "dependencies": {
     "@fontsource/poppins": "^5.1.1",
+    "echarts": "^5.6.0",
     "html5-qrcode": "^2.3.8",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
