--- a/assets/package.json
+++ b/assets/package.json
@@ -6,7 +6,8 @@
     "html5-qrcode": "^2.3.8",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
-    "phoenix_live_view": "file:../deps/phoenix_live_view"
+    "phoenix_live_view": "file:../deps/phoenix_live_view",
+    "sortablejs": "^1.15.6"
   },
   "devDependencies": {
     "@egoist/tailwindcss-icons": "^1.8.1",
