--- a/assets/package.json
+++ b/assets/package.json
@@ -2,6 +2,8 @@
   "type": "module",
   "dependencies": {
     "@fontsource/poppins": "^5.1.1",
+    "@iconify-json/lucide": "^1.2.24",
+    "@iconify-json/ri": "^1.2.5",
     "echarts": "^5.6.0",
     "html5-qrcode": "^2.3.8",
     "phoenix": "file:../deps/phoenix",
@@ -10,8 +12,7 @@
     "sortablejs": "^1.15.6"
   },
   "devDependencies": {
-    "@egoist/tailwindcss-icons": "^1.8.1",
-    "@iconify/json": "^2.2.263",
+    "@iconify/tailwind": "^1.2.0",
     "@tailwindcss/forms": "^0.5.10",
     "@types/node": "^22.10.5",
     "autoprefixer": "^10.4.20",
