--- a/assets/package.json
+++ b/assets/package.json
@@ -1,23 +1,21 @@
 {
   "type": "module",
-  "dependencies": {
+  "devDependencies": {
+    "@fontsource-variable/open-sans": "^5.1.1",
     "@fontsource/poppins": "^5.1.1",
-    "@iconify-json/lucide": "^1.2.24",
-    "@iconify-json/ri": "^1.2.5",
+    "@iconify/json": "^2.2.311",
+    "@iconify/tailwind": "^1.2.0",
+    "@tailwindcss/forms": "^0.5.10",
+    "@types/node": "^22.10.5",
+    "autoprefixer": "^10.4.20",
     "echarts": "^5.6.0",
     "html5-qrcode": "^2.3.8",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "phoenix_live_view": "file:../deps/phoenix_live_view",
-    "sortablejs": "^1.15.6"
-  },
-  "devDependencies": {
-    "@iconify/tailwind": "^1.2.0",
-    "@tailwindcss/forms": "^0.5.10",
-    "@types/node": "^22.10.5",
-    "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "prettier": "^3.3.3",
+    "sortablejs": "^1.15.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.5.4",
     "unplugin-fonts": "^1.3.1",
